--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
+    <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="/">Home</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -27,7 +27,7 @@
 
     <a class="sidebar-nav-item" href="{{ site.links.github }}">Projects</a>
     <a class="sidebar-nav-item" href="{{ site.links.resume }}">Resume</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Source</a>
+    <a class="sidebar-nav-item" href="{{ site.github.source }}">Source</a>
   </nav>
 
   <div class="sidebar-item">
