--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,11 @@
       </div>
 
       <div class="container content">
-        {{ content }}
+          {{ content }}
       </div>
     </div>
 
+    <!-- Scripts -->
+    {% include analytics.html %}
   </body>
 </html>
