--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
 
     <a class="sidebar-nav-item" href="{{ site.links.github }}">Projects</a>
     <a class="sidebar-nav-item" href="{{ site.links.resume }}">Resume</a>
-    <a class="sidebar-nav-item" href="{{ site.github.source }}">Source</a>
+    <a class="sidebar-nav-item" href="{{ site.links.source }}">Source</a>
   </nav>
 
   <div class="sidebar-item">
