--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    {% if page.title %}
+      {% if page.title %}
       {{ page.title }} &middot; {{ site.title }}
-    {% else %}
+      {% else %}
       {{ site.title }} &middot; {{ site.tagline }}
-    {% endif %}
+      {% endif %}
   </title>
 
   <!-- CSS -->
@@ -26,4 +26,8 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- Scripts -->
+  {% include analytics.html %}
+
 </head>
