--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-  {% include head.html %}
+    {% include head.html %}
+    {% include analytics.html %}
 
-  <body>
+    <body>
 
-    {% include sidebar.html %}
+	{% include sidebar.html %}
 
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+	<!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+             content to avoid any CSS collisions with our real content. -->
+	<div class="wrap">
+	    <div class="masthead">
+		<div class="container">
+		    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-          <h3 class="masthead-title">
-            <a href="/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
-        </div>
-      </div>
+		    <h3 class="masthead-title">
+			<a href="/" title="Home">{{ site.title }}</a>
+			<small>{{ site.tagline }}</small>
+		    </h3>
+		</div>
+	    </div>
 
-      <div class="container content">
-          {{ content }}
-      </div>
-    </div>
-  </body>
+	    <div class="container content">
+		{{ content }}
+	    </div>
+	</div>
+    </body>
 </html>
