--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.links.github }}">Projects</a>
-    <a class="sidebar-nav-item" href="{{ site.links.resume }}">Resume</a>
+    <a class="sidebar-nav-item" href="{{ site.links.linkedin }}">Resume</a>
     <a class="sidebar-nav-item" href="{{ site.links.source }}">Source</a>
   </nav>
 
